Fix z-index on footer

--- a/app/stylesheets/general.css
+++ b/app/stylesheets/general.css
@@ -56,6 +56,7 @@ body {
 
 .footer {
   flex-grow: 0;
+  z-index: 5;
 }
 
 /* Overlay important panels over map */
